Fix page title spacing

--- a/osbp_common_v3.css
+++ b/osbp_common_v3.css
@@ -644,9 +644,9 @@ div#content {
 	color:  #222;
 	margin: 0 -20px 20px;
 	background: #edeeef;
-	padding: 0 20px 6px;
+	padding: 0 20px 15px;
 	font-size: 2em;
-	line-height: 1;
+	line-height: 1.3;
 }
 
 .register-now-button {
@@ -1045,7 +1045,7 @@ a.donate-button:active {
 }
 
 .frontpage_snippet {
-	padding: 0 0 0 60px;
+	padding: 0 0 1em 60px;
 }
 
 #citizen_snippet {
